--- a/css/styles.css
+++ b/css/styles.css
@@ -327,11 +327,10 @@
     color: var(--light-accent-color);
     position: absolute;
     background: rgba(47, 48, 58, 0.8);
-    padding: 27px 132px;
+    padding: 27px 20px;
     bottom: 0;
-    left: 0;
-    right: 0;
-    white-space:nowrap;
+    width: 100%;
+
   }
   
   /*team section styling*/
